fix: overflow

--- a/docs/_sass/minima/_layout.scss
+++ b/docs/_sass/minima/_layout.scss
@@ -371,7 +371,6 @@ Sidebar
     position: -webkit-sticky;
     position: sticky;
     top: 2em;
-    overflow: auto;
   }
 }  
 
